plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.parchmentmc.librarian.forgegradle' version '1.2.0'
    id 'org.spongepowered.mixin' version '0.7.+'
}

version = mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-${minecraft_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            workingDirectory project.file('run/client_1')
            jvmArgs "-Xmx4g"
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        client2 {
            parent minecraft.runs.client
            args '--username', 'Ranpoes'
            workingDirectory project.file('run/client_2')
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            workingDirectory project.file('run/server')
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

// RVP 载具包仅维护在 run/client_1/limitless_vehicle/rvp（不再从 src/main/resources/rvp 同步）

tasks.named('compileJava').configure {
    // clean + FROM-CACHE can skip writing build/classes and breaks dev run (NoClassDefFoundError).
    outputs.cacheIf { false }
}

['runClient', 'runClient2', 'runServer', 'runGameTestServer', 'runData'].each { taskName ->
    tasks.matching { it.name == taskName }.configureEach {
        dependsOn 'classes'
    }
}

repositories {
    maven { name = 'AliyunPublic'; url = 'https://maven.aliyun.com/repository/public' }
    maven { name = 'AliyunCentral'; url = 'https://maven.aliyun.com/repository/central' }
    mavenCentral()
    flatDir {
        dir 'libs'
    }
    maven {
        url = "https://repo.spongepowered.org/repository/maven-public/"
        content {
            includeGroupByRegex "org\\.spongepowered.*"
        }
    }
    maven {
        url 'https://jitpack.io'
        content {
            includeGroup "com.github.mcmodderanchor"
        }
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    // 本体
    implementation fg.deobf("libs:ywzj_vehicle-1.20.1:0.5.6-all")
    // SBM
    jarJar(implementation(fg.deobf("com.github.mcmodderanchor:simplebedrockmodel:2.3.2-forge-mc1.20.1"))) {
        jarJar.ranged(it, "[2.3.2,)")
    }
    compileOnly("com.maydaymemory:mae:1.1.2") {
        exclude group: 'com.google.code.findbugs', module: 'jsr305'
        exclude group: 'it.unimi.dsi', module: 'fastutil'
        exclude group: 'org.joml', module: 'joml'
    }
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'MixinConfigs'            : "${mod_id}.mixins.json",
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1', // We are version 1 of ourselves
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
    finalizedBy 'reobfJar'
}

tasks.register('reobfJarNamed', Copy) {
    dependsOn 'reobfJar'
    from("$buildDir/reobfJar/output.jar")
    into("$buildDir/libs/reobf")
    rename { "${mod_id}-${minecraft_version}-${mod_version}-reobf.jar" }
}

tasks.register('reobfJarJarNamed', Copy) {
    dependsOn 'reobfJarJar'
    from("$buildDir/libs/${mod_id}-${minecraft_version}-${mod_version}-all.jar")
    into("$buildDir/libs/reobf")
    rename { "${mod_id}-${minecraft_version}-${mod_version}-reobf-all.jar" }
}

tasks.matching { it.name == 'reobfJar' }.configureEach {
    finalizedBy tasks.named('reobfJarNamed')
}

tasks.matching { it.name == 'reobfJarJar' }.configureEach {
    finalizedBy tasks.named('reobfJarJarNamed')
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

mixin {
    config 'ywzj_rvp.mixins.json'
    add sourceSets.main, "ywzj_rvp.refmap.json"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}
